<resources>
    <string name="app_name">FunApp</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_error_email">Login should have at least 5 characters</string>
    <string name="login_error_password">Password should have at least 5 characters</string>
    <string name="login_success">Successful log-in</string>
    <string name="welcome">Welcome</string>
    <string name="loginButton">Login</string>
    <string name="joke_App">Jokes</string>
    <string name="see_joke">Jokes</string>
    <string name="your_database">Your Database</string>
    <string name="search_via_category">Search via Category</string>
    <string name="set_notification_time">Your time for everyday notifications :</string>
    <string name="class_cast_exception_in_time_picker">You need to implement Interface</string>
    <string name="class_cast_exception_in_joke_fragment">You need to implement Interface</string>
    <string name="ErrorText">There is a problem with internet connection :((</string>
    <string name="channel_name">joke_notification</string>
    <string name="channel_description">channel_for_joke_notification</string>
    <string name="sign_me_text_button">Sign me In!</string>
    <string name="_9gag">9GAG</string>
    <string name="sub_item_string">U may also like...</string>
    <string name="text_in_nav_head">Fun App to</string>
    <string name="text_below_nav_head">Make you smile ! :)</string>
    <string name="joemonster">JoeMonster</string>
    <string name="SecondTextInCameraFragment">See something fun ? SHARE IT ! :D</string>
    <string name="Item_drawer_cameraShare">Camera Share</string>
    <string name="permission_denied_message">You need to grant the access</string>



</resources>
